Routing slide done

--- a/src/app/slides/_slides/routing.mdx
+++ b/src/app/slides/_slides/routing.mdx
@@ -18,10 +18,11 @@ import routing from './images/routing.png'
 </TwoColumns>
 
 <Notes>
-  Next.js routing is based on the file system and file conventions. This is definitely an area where people have opinions around the file convention. Some argument that it is hard to navigate around the files etc. Navigation in among the files is not a problem since most IDEs have ways to search files by typing the folder name, and you get used to that quite fast.
+  Next.js routing is based on the file system and file conventions. This is definitely an area where people have opinions around the file convention. Some argument that it is hard to navigate around the files etc. Navigation in among the files is not a problem since most IDEs have ways to search files by typing the folder name, and you get used to that quite fast. I have come to like the file convention since it makes it easy to find the files you are looking for. 
 
   Some of the concepts, but not all, that you should know about when using nextjs are:
-  * layouts which defines the layout for a set of pages. They can also be nested.
+
+  * layouts which defines the layout for a set of pages. Which we will talk more about soon.
   * dynamic routes are defined using square brackets, The value inside the brackets can be either a wild card or match only one segment.
   * Route groups is also something that can be very useful to group together things that belongs together and give them the same layout without impacting the rest of the site.
   * loading.tsx can in some scenarios be useful to show a loading indicator while the page is loading. This really depends on your use case though.
