--- a/src/app/slides/_slides/layout.mdx
+++ b/src/app/slides/_slides/layout.mdx
@@ -26,6 +26,6 @@ import layouts from './images/nested-layouts-ui.avif'
 <Notes>
 Let's dig a little bit deeper in pages and layouts. As mentioned in the previous slide, layouts are a way to define the layout for a set of pages. The important part here is that layouts can be nested. If you are leveraging nextjs link component and client side navigation only the part in the layout will change when navigating between pages. This is gives a very smooth and stable user experience where you can have this main shell and only swap out the content that really changes.
 
-So let's what that can look like.
+So let's see what that can look like. When I click and navigate in the demo, you seen that a green box is flashing for the area that was loaded, this is the magic of layouts. It is not that you haven't been able to achieve this before, for me this is more about developer experience and how easy it is to achieve this. You can even see the nested layouts working when clicking on specific orders. Let's have a quick look at the code for this.
 
 </Notes>
