--- a/src/app/slides/_slides/rsc.mdx
+++ b/src/app/slides/_slides/rsc.mdx
@@ -29,19 +29,17 @@ import RSC4 from './images/rsc4.png';
 
 
 <Notes>
-React server components is probably one of the largest changes nextjs has pushed into the react ecosystem with nextjs 13. As I see it this is not something 100% new and more how it has been on other runtimes for a long time, but we have been focusing too much on creating SPAs so we have forgot about it. Doing the initial rendering on the server is how I think it should be, and then you just sprinkle some client side magic dust where you need it. This leads to faster applications and less javascript on the client which I think is a good thing. It also simplifies a lot when it comes to application infrastructure since you often can get rid of the whole BFF in a lot of scenarios, instead you can just get the data you need on the server and serve the finished HTML.
+React server components is probably one of the largest changes in the react ecosystem the last couple of years. Next.js was one of the first to implement it in next.js 13. As I see it this is not something 100% new and more how it has been on other runtimes for a long time, but we have been focusing too much on creating SPAs so we have forgot about it. Doing the initial rendering on the server is how I think it should be done, and then you just sprinkle some client side magic dust where you need it. This leads to faster and simpler applications and less javascript on the client which I think is a good thing. It also simplifies a lot when it comes to application infrastructure since you often can get rid of the whole BFF in a lot of scenarios, instead you can just get the data you need on the server and serve the finished HTML.
 
-So how does it work? If you have a static page, you can easily make it all run and render on the server. In this scenario everything is considered to be a server components, which basically means it has no interaction.
+So how does it work in next.js? If you have a static page, you can easily make it all run and render on the server. In this scenario everything is considered to be a server components, which basically means it has no interaction.
 
 A component is made a client component by adding "use client" to the top of the file, this basically tells nextjs that this component has interaction that needs to be dealt with. Note that the first render still happens on the server.
 
-This "use client" directive sort of marks a border, and when you cross that border every component you define inside that border will be considered a client component. 
+This "use client" directive sort of marks a border, and when you cross that border every component you define inside that border will be considered a client component. Again, even though they are considered to be client components the first render still happens on the server.
 
-Note that I said every component you define inside. If you instead pass the component in as argument you can actually get to the scenario where you have a client component wrapping server components, which is very powerful and something that you probably want to use more often than not.
+Note that I said every component you define inside a client component. If you instead pass the component in as argument you can actually get to the scenario where you have a client component wrapping server components, which is very powerful and something that you probably want to use more often than not in a lot of scenarios. This might interfere with how you have been writing components before, but it is something I really think you should adopt if you are using nextjs.
 
-So let's look at some examples. First we have this simple demo where everything is running server side, and you can see on the log statment that it runs on the server, but nothing is visible in the browser log.
+I have one example for all this. This one page shows how things can be classified as server or client components. I have added the most relevant parts of the code to the left. Here you see the page, which is a server component. It is wrapping two components, one that is a server component and one that is a client component. For the client component you can see that the components defined within the client component is considered client components, but the components defined from the outside stays server component.
 
-If we add a simple button to the page in a naive way everything has been turned to a client side component, but you can also notice that we log both on the server and on the client during hydration.
-
-If we change it up and pass a button component in you will now see how we can mix and match server and client components, and this is what you want to do to get the best performance out of your application and as little javascript as possible on the client.
+Let's have a quick look at the rest of the code for this small page.
 </Notes>
