--- a/src/app/slides/_slides/internationalization.mdx
+++ b/src/app/slides/_slides/internationalization.mdx
@@ -24,7 +24,9 @@ import globe from './images/globe.png'
 </TwoColumns>
 
 <Notes>
-When we started out with using app router there was no framework or nothing available for us when it comes to internationalization, so we had to implement our own solution for it. In addition, most i18n solutions is not a perfect fit for what we needed. We really didn't have a i18n problem, it was more a "market" problem where our application should support multiple markets and all markets had different languages. So we couldn't use routing based translations and needed something else. This is where we started to use one of the most powerful features in nextjs as I see it, the middleware. I still have things I wish around the middleware, but that it is available is a life saver. When running on vercel the middleware is also running on the edge, which makes it very good for things like authentication, figuring out locale, checking cookies and other things. One thing I think you should avoid is making request to other services here, of course there are exceptions if it happens rarely like cookie refresh, but ideally you want to make the middleware as fast as possible and just doing things with cookies and headers is often very fast since all that is in memory.
+When we started out with using app router there was no framework or nothing available for us when it comes to internationalization, so we had to implement our own solution for it. In addition, most i18n solutions is not a perfect fit for what we needed. We really didn't have a i18n problem, it was more a "market" problem where our application should support multiple markets and all markets had different languages. So we couldn't use routing based translations and needed something else. This is where we started to use one of the most powerful features in nextjs as I see it, the middleware. I still have things I wish around the middleware to make it even easier to work with, but having it available is a life saver. When running on vercel the middleware is also running on the edge, which makes it very good for things like authentication, figuring out locale, checking cookies and other things. One thing I think you should avoid is making request to other services here, of course there are exceptions if it happens rarely like cookie refresh, but ideally you want to make the middleware as fast as possible and just doing things with cookies and headers is often very fast since all that is in memory.
 
 So what did we do. Our solution supports a couple of different scenarios. We support language in cookie and also domain, we had to have a solution for that since we don't have market specific domains in the preview environment, instead we have a route that is used to set a cookie to switch between the markets.
+
+I have another small demo showing how it could work. Clicking on the flags will render the page again, but as you see it is on the same URL. What happening here is that we are using middleware to check which version of the application we should show based on a cookie value. This is a very simple scenario of how we have solved internationalization in our application.
 </Notes>
