--- a/src/app/slides/_slides/feature-toggling.mdx
+++ b/src/app/slides/_slides/feature-toggling.mdx
@@ -19,5 +19,7 @@ import { Toggle } from '../_components/toggle.tsx'
 </TwoColumns>
 
 <Notes>
-When talking about middleware I think it is worth mentioning how we are working with feature toggles and routing. Since we do want to render as much as possible on the server in a static fashion we can't rely on cookies, headers or anything from a request in the route part of the application, but we can use those in middleware. So what we do in the middleware is looking at things like, market, flags and user role and create a context based on that which we base64 encode and this is our first segment of the path. This way we can have completely static rendered application for different scenarios. And it also makes it possible for us to turn off caching if we are previewing from cms. Feature toggle overrides are also stored in this context, so from the vercel toolbar we can set toggles on a per user session (if you have access) and this makes it extremely convenient for us to test out things in production. It also makes it much safer for us developer to push things out to production behind a feature flag and then we can get feedback before turning the flag on for everyone. 
+When talking about middleware I think it is worth mentioning how we are working with feature toggles and routing. Since we do want to render as much as possible on the server in a static fashion we can't rely on cookies, headers or anything from a request in the route part of the application, but we can use those in middleware. So what we do in the middleware is looking at things like, market, flags and user role and create a context based on that which we base64 encode and this is our first segment of the path. This way we can have completely static rendered application for different scenarios. And it also makes it possible for us to turn off caching if we are previewing from cms. Feature toggle overrides are also stored in this context, so from the vercel toolbar we can set toggles on a per user session (if you have access) and this makes it extremely convenient for us to test out things in production. It also makes it much safer for us developer to push things out to production behind a feature flag and then we can get feedback before turning the flag on for everyone.
+
+At elkjøp we are leveraging LaunchDarkly which basically have a one click integration with vercel edge config, which is a super fast config you can use on vercel and is very suitable for things like feature toggles. In this demo I'm using the raw edge config, but the concept is the same. So here you see my super simple toggles that I can turn on and off and see the result in the application, I can also use one of the best feature of vercel, the toolbar, to override feature toggles for my session. To get that working you basically just need to implement an API and you are good to go. Here you can see how I override some theme and animations for my user session.
 </Notes>
