--- a/src/app/slides/_slides/caching.mdx
+++ b/src/app/slides/_slides/caching.mdx
@@ -22,7 +22,7 @@ import caching from './images/caching.webp'
 </TwoColumns>
 
 <Notes>
-Caching is a lot of fun, isn't it? In next.js 13 I think next.js was shipped with a fetch method that sort of changed the default behavior of what you would expect from a fetch method. On the server everything was cached as default. It was definitely with good intentions but it definitely makes it slightly confusing from time to time when things are not updated as you would expect. In version 15 they will change the default behavior to not cache by default, which I think is a good thing... but if you are on an earlier version you should be aware. 
+Caching is a lot of fun, isn't it? In next.js 13 I think next.js was shipped with a fetch method that sort of changed the default behavior of what you would expect from a fetch method. On the server everything was cached as default. It was definitely with good intentions but it makes it slightly confusing from time to time when things are not updated as you would expect. In version 15 they will change the default behavior to not cache by default, which I think is a good thing... but if you are on an earlier version you should be aware. 
 
 Caching in next.js comes in two flavours, page caching and data caching. Page caching is the whole page and data cache is when you cache the data you have. This could be with fetch, which has cache behavior built-in, or you could use the unstable cache method to cache data that is not using fetch. The data cache and page cache is somehow connected, so if the data cache is revalidated also the page for that page will be revalidated. Revalidation is next.js words of saying that some cache has expired and it needs new data. It is also important to know if you are on a dynamic route or static route, since the cache behavior differs slightly. On a static route all the cached fetched calls will be fetched again, but on a dynamic route only the data that needs new data will be fetched again. The time for revalidation is calculated as the lowest revalidation time of all the "connected" data.
 
