--- a/src/app/slides/_slides/closing.mdx
+++ b/src/app/slides/_slides/closing.mdx
@@ -16,7 +16,7 @@ import homepage from './images/homepage.png'
 </div>
 
 <Notes>
-  With that I would like to thank you all for coming and spent some time with me. I do think there is time for a couple of questions if there are any? I can also stay around for a couple of minutes after the session and will be here for the rest of the conference. Feel free to reach out here or on twitter, linkedin or whatever platform you prefer and manage to find me on.
+  With that I would like to thank you all for coming and spent some time with me. Please vote on the way out. While you think about which color you should pick there might be time for a couple of questions if there are any? I will also stay around for a couple of minutes after the session and will be here for the rest of the conference. Feel free to reach out here or on twitter, linkedin or whatever platform you prefer and manage to find me on. Thank you!
 </Notes>
 
 <Cards />
