--- a/src/app/slides/_slides/ppr-and-streaming.mdx
+++ b/src/app/slides/_slides/ppr-and-streaming.mdx
@@ -23,7 +23,7 @@ import ppr from "./images/ppr.png"
 </TwoColumns>
 
 <Notes>
-TBD
+Partial Prerendering is one of the features I am really looking forward to reaching GA. I think it will be a game changer for how you write applications using next.js. With partial prerendering you can create a shell and then have the dynamic parts being streamed in in the same response. This makes it easier for the client to start processing the request faster, as well as getting all the data without doing extra requests. 
 </Notes>
 
 export default ({children}) => {
