--- a/src/app/slides/_slides/server-actions.mdx
+++ b/src/app/slides/_slides/server-actions.mdx
@@ -26,4 +26,6 @@ import serverActions from './images/server-actions.png'
 Oh the drama! When server actions was announced it was a lot of fuzz. Everything from php has it, dotnet had these things already with webforms. I won't deny that any of those technologies has it, but not all innovations has to be completely new. I think it is perfectly fine if you take something from history and make it better, which I think next.js has done with server actions. I did webforms back in the days, and yes there was way to communicate between client and server, but webforms also hijacks a lot of the web which at least made it hard for me.
 
 Server actions in next.js is really super simple, and I don't understand the controversy around them. All it gives you is basically a simple way to communicate with the server without having to write some boilerplate code. There is slightly more to it, but that is the core piece of it from my perspective. 
+
+There are two demos on the same slide here. One is showing a simple form, and the other one is just how you can hook up server actions to a button.
 </Notes>
