Some more notes

--- a/src/app/slides/_slides/background.mdx
+++ b/src/app/slides/_slides/background.mdx
@@ -62,6 +62,6 @@ import SpeedInsights from "./images/speed_insights.png";
   <Notes>
     If you have used any of our sites in Norway, Sweden, Denmark or Finland the last couple of years you might have experienced the site looking something like the image on the left. What you see is a screenshot from the old site where the prices are missing. That could of course be fine, if they stream in within a reasonable time frame. In this particular example when I took the screenshot we had reports it took 30 seconds or more for the prices to load. I don't know about you, but I don't have that long patience and would leave any site that has that kind of experience, unless I know there is a really great offer there... then I might suffer through it.
 
-    This experience also lead to some comments online, like the ones below the image. The first one is translated to something like "The site is horrible, so I end up on another site". The second one is from a person working in one of our stores and they are also frustrated. These are just two examples of many comments online the last couple of years. As a developer it sort of hurts seeing these kind of feedback, even though I was not part of the team delivering the previous version, so that is something I wanted to address. I even had a fellow speaker here at the conference asked me when I joined elkjøp when I will fix the site. So this is partly the story of how we made it from what you see on the left to what we have one the right hand side. The score on the right is from Vercel's speed insights and we also have the Google's page speed insights, and this score has been consistent since we went live.
+    This experience also lead to some comments online, like the ones below the image. The first one is translated to something like "The site is horrible, so I end up on another site". The second one is from a person working in one of our stores and they are also frustrated. These are just two examples of many comments online the last couple of years. As a developer it sort of hurts seeing this kind of feedback, even though I was not part of the team delivering the previous version, so that is something I wanted to address. I even had a fellow speaker here at the conference asked me when I joined elkjøp when I will fix the site. So this is partly the story of how we made it from what you see on the left to what we have one the right hand side. The score on the right is from Vercel's speed insights and we also have the Google's page speed insights, and this score has been consistent since we went live.
 
   </Notes>
