Fix spelling next.js

--- a/src/app/slides/_slides/summary.mdx
+++ b/src/app/slides/_slides/summary.mdx
@@ -10,7 +10,7 @@ import { Column, TwoColumns } from '../_components/slide-layouts.tsx'
 * Change is hard, but possible
 * People AND tech is important for a performant application
 * Know the characteristics of your application and choose the right tech for the job
-* Nextjs lets you focus on building your application
+* Next.js lets you focus on building your application
 * Vercel minimizes the need for infrastructure work
 </div>
 </Column>
